--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     \
     <string name="q3"><font color="#1976D2">Our Role</font></string>
     <string name="a3"><font color="#1976D2">To inspire</font> . and provide the young scientists of India with the required infrastructure to convert their dreams into reality. With the commitment of “Working Towards Being the Best”, LNCT is positive to provide students with state of art infrastructure to facilitate students in being their best selves and excel in the research field.To inspire . and provide the young scientists of India with the required infrastructure to convert their dreams into reality. With the commitment of “Working Towards Being the Best”, LNCT is positive to provide students with state of art infrastructure to facilitate students in being their best selves and excel in the research field.</string>
+    <string name="skip_login"><u>Skip Login</u></string>
 </resources>
